apps/home-app/api/api-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: home-app
spec:
  selector:
    app: fastapi-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: home-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-container
        image: goegoe0212/home-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "1000m"
            memory: "1024Mi"
          limits:
            cpu: "2000m"
            memory: "2048Mi"
        volumeMounts:
          - name: fastapi-data
            mountPath: /data
      restartPolicy: Always
      volumes:
        - name: fastapi-data
          persistentVolumeClaim:
            claimName: fastapi-nfs-pvc
---
