apps/home-app/api/redis-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: home-app
spec:
  selector:
    app: redis-app
  ports:
  - name: http
    port: 6379
    targetPort: 6379
  type: LoadBalancer
  loadBalancerIP: 192.168.20.101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: home-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - name: redis-container
        image: redis:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
