apps/home-app/api/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: home-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
---
